# rust-overture

./: .gitignore  Cargo.toml  README.md
examples/: chain.rs  combining.rs  compose.rs  compose_rc.rs  compose_rs.rs  concat.rs  curry.rs  curry_sync.rs  eg_concat_fraud_detection_better_rc.rs  eg_pipe_validation_iso.rs  flip.rs  fraud_detection.rs  fraud_detection_better_rc.rs  fraud_detection_more_better_lookup_tables.rs  keypath.rs  keypaths.rs  map.rs  options.rs  pipe.rs  result.rs  setter.rs  setter_ergonomics.rs  setter_ergonomics_problems.rs  smart_home_surprise.rs  suites.rs  test.rs  uncurry.rs  update.rs  validation_iso.rs  with.rs  zip_option.rs  zip_result.rs  zip_suites.rs  zurry.rs
overture-core/: Cargo.toml
overture-core/src/: chain.rs  combinig.rs  compose.rs  compose_rc.rs  compose_rs.rs  concat.rs  curry.rs  flip.rs  keypath.rs  lense.rs  lib.rs  options.rs  pipe.rs  result.rs  setter.rs  suites.rs  uncurry.rs  with.rs  zip_option.rs  zip_result.rs  zip_suites.rs  zurry.rs
src/: chain.rs  combinig.rs  compose.rs  concat.rs  curry.rs  curry_sync.rs  flip.rs  keypath.rs  keypaths.rs  lense.rs  lib.rs  options.rs  pipe.rs  result.rs  setter.rs  suites.rs  update.rs  with.rs  zip_option.rs  zip_result.rs  zip_suites.rs
