[package]
name = "overture-core"
version = "0.1.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "A rust overture library."
repository = "https://github.com/codefonsi/rust-overture"
homepage = "https://github.com/codefonsi/rust-overture"
documentation = "https://docs.rs/overture-core"
keywords = ["rustoverture", "operators", "type-safe","functional-rust"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
